# pytorch-ff

./: Dockerfile  README.md  nginx.conf  nn_model.py  pyproject.toml  trainer.py
.github/workflows/: canary.yaml  main.yml
app/: flask_app.py  model.onnx  model.pth  swagger.json  validate_onnx.py
