[tool.poetry]
name = "feed-forward-pytorch"
version = "0.1.0"
description = "A simple feed-forward neural network model serving via Flask"
authors = ["Shreyak Vashisht <shreyakvashisht21@cloudshell>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.0"
pandas = "^1.3.3"
numpy = ">=1.20,<2.0"

torch = { version = "^1.10.0", extras = ["cpu"] }


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
